Minor preprod tweaks

--- a/web/bundles/s2b/css/style.css
+++ b/web/bundles/s2b/css/style.css
@@ -152,6 +152,10 @@ input.button {
     cursor: pointer;
 }
 
+div.readable {
+    font-size: 1.2em;
+}
+
 /* ------------------------------------------------------------------------------
 L A Y O U T
 --------------------------------------------------------------------------------- */
