--- a/web/bundles/s2b/css/style.css
+++ b/web/bundles/s2b/css/style.css
@@ -323,6 +323,18 @@ fieldset.search {
     color: #fff;
 }
 
+#header #nav img {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background: transparent;
+    margin-top: -4px;
+    opacity: 0.7;
+}
+#header #nav img:hover {
+    opacity: 1;
+}
+
 /* content */
 #content-wrap {
     clear: both;
