Add links to Symfony2, Doctrine2 and mongoDB

--- a/web/bundles/s2b/css/style.css
+++ b/web/bundles/s2b/css/style.css
@@ -492,7 +492,7 @@ fieldset.search {
 }
 
 #footer-bottom .knplabs img {
-    vertical-align: middle;
+    vertical-align: top;
 }
 #footer-outer,
 #footer-bottom {
