--- a/src/Application/S2bBundle/Resources/public/css/style.css
+++ b/src/Application/S2bBundle/Resources/public/css/style.css
@@ -593,12 +593,13 @@ div.post-meta li.permalink { background: url(../images/permalink.gif) no-repeat 
 div.post-meta li.fork { background: url(../images/fork.png) no-repeat 2px center; }
 div.post-meta li.watch { background: url(../images/eye.png) no-repeat 2px center; }
 div.post-meta li.download { background: url(../images/box.png) no-repeat 2px center; }
-div.post-meta li.source { background: url(../images/source.png) no-repeat 2px center; }
+div.post-meta li.github { background: url(../images/github.png) no-repeat 2px center; }
 div.post-meta li.version { background: url(../images/pill.png) no-repeat 2px center; }
 div.post-meta li.email { background: url(../images/mail.png) no-repeat 2px center; }
 div.post-meta li.lego { background: url(../images/lego.png) no-repeat 2px center; }
 div.post-meta li.location { background: url(../images/globe.png) no-repeat 2px center; }
 div.post-meta li.company { background: url(../images/users.png) no-repeat 2px center; }
+div.post-meta li.blog { background: url(../images/quill.png) no-repeat 2px center; }
 
 .left .post-meta ul li a { color: #147DB6; }
 .left .post-meta ul li a:hover { color: #333; }
