--- a/src/Application/S2bBundle/Resources/public/css/style.css
+++ b/src/Application/S2bBundle/Resources/public/css/style.css
@@ -130,16 +130,21 @@ input.button {
     cursor: pointer;
 }
 
-div.readable {
+div.home_text {
     font-size: 1.2em;
 }
 
+div.doc_text {
+    font-size: 1.2em;
+    margin: 10px 30px 0 0;
+}
+
 hr {
-    border-color: #EFEFEF;
+    border-color: #E4ECCE;
     border-style: solid;
     border-bottom: none;
-    background-color: #EFEFEF;
-    color: #EFEFEF;
+    background-color: #E4ECCE;
+    color: #E4ECCE;
     margin: 1em 0;
 }
 
@@ -545,7 +550,7 @@ img.gravatar {
     margin-right: 0;
 }
 .markdown h1 { font-size: 2.2em; font-weight: normal; letter-spacing: -2px; }
-.markdown h2 { font-size: 1.8em; font-weight: normal; border-top: 1px solid #D4D4D4; margin-top: 1em;}
+.markdown h2 { font-size: 1.8em; font-weight: normal; border-top: 3px solid #E4ECEE; margin-top: 1em;}
 .markdown h3 { font-size: 1.4em; font-weight: normal; letter-spacing: -0.5px; padding-top: 15px; }
 .markdown h4 { font-size: 1.2em; }
 
@@ -554,6 +559,7 @@ img.gravatar {
     padding: 1em;
     border: 1px solid #E4ECEE;
     overflow: auto;
+    -webkit-box-shadow: inset 2px 2px 5px #F2F2F2;
 }
 
 /* post meta */
