Added Twig for Bundle list

--- a/src/Application/S2bBundle/Resources/views/Main/index.twig.html
+++ b/src/Application/S2bBundle/Resources/views/Main/index.twig.html
@@ -1,7 +1,7 @@
 {% extends "S2bBundle::layout.twig.html" %}
 
 {% block title %}Home{% endblock %}
-{% block description %}Comprehensive list of Symfony2 Bundles ordered by relevance and integrated with GitHu{% endblock %}
+{% block description %}Comprehensive list of Symfony2 Bundles ordered by relevance and integrated with GitHub{% endblock %}
 {% block slogan %}Comprehensive list of Symfony2 Bundles ordered by relevance and integrated with GitHub{% endblock %}
 
 {% block content %}
