--- a/src/Application/S2bBundle/Resources/views/Bundle/list.twig.html
+++ b/src/Application/S2bBundle/Resources/views/Bundle/list.twig.html
@@ -1,24 +1,31 @@
-{% extends "S2bBundle::layout.twig.html" %}
+{% extends 'S2bBundle::layout.twig.html' %}
 
+{% block h1 %}<span>{{ repos|length }}</span> Bundles{% endblock %}
 
-{% block h1 %}<span>.count($repos).</span> Bundles{% endblock %}
-{% block title %}All '.count($repos).' Bundles{% endblock %}
+{% block title %}All {{ repos|length }} Bundles{% endblock %}
+
 {% block description %}All Open Source Symfony2 Bundles sorted by {{ sort }}{% endblock %}
+
 {% block slogan %}All Open Source Bundles sorted by {{ sort }}{% endblock %}
 
-
 {% block sidemenu %}
-
-<?php $view->output('S2bBundle:Bundle:bigList', array('repos' => $repos)) ?>
 <h3>Sort by</h3>
-<div class="sidemenu uppercase">
+<div class='sidemenu uppercase'>
     <ul>
-    <?php foreach($fields as $field => $text): ?>
-        <li<?php $field == $sort && print ' class="current"' ?>>
-            <a href="<?php echo $view['router']->generate('bundle_list', array('sort' => $field)) ?>"><?php echo $text ?></a>
+    {% for field, text in fields %}
+        {% if field == sort %}
+        <li class='current'>
+        {% else %}
+        <li>
+        {% endif %}
+            <a href='{{ path('bundle_list', {'sort': field}) }}'>{{ text }}</a>
         </li>
-    <?php endforeach ?>
+    {% endfor %}
     </ul>
 </div>
-<?php $view->output('S2bBundle:Repo:add') ?>
+{% include 'S2bBundle:Repo:add.twig.html' %}
+{% endblock %}
+
+{% block content %}
+{% include 'S2bBundle:Bundle:bigList.twig.html' with {'repos': repos} %}
 {% endblock %}
