--- a/src/Application/S2bBundle/Resources/views/Project/show.html.twig
+++ b/src/Application/S2bBundle/Resources/views/Project/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'S2bBundle:Repo:show.twig.html' %}
+{% extends 'S2bBundle:Repo:show.html.twig' %}
 
 {% block h1 %}{{ repo.name }}{% endblock %}
 
